generated/nixidy/prod/prometheus/HTTPRoute-prometheus-kube-prometheus-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app: kube-prometheus-stack-prometheus
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kube-prometheus-stack
    chart: kube-prometheus-stack-75.12.0
    heritage: Helm
    release: prometheus
  name: prometheus-kube-prometheus-prometheus
  namespace: monitoring
spec:
  hostnames:
    - prometheus.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
      matches:
        - path:
            type: PathPrefix
            value: /
